--- a/projeto01/README.me
+++ b/projeto01/README.me
@@ -1,6 +1,4 @@
 
-
-
 #Instalar web server
 sudo apt update
 sudo apt install nginx
@@ -53,5 +51,11 @@ Abrir no navegador >> http://IP-DA-VM/
 Abrir no navegador >> http://IP-DA-VM/test  << validar proxy reverso no /test
 
 
+# Entregas:
+1. Hypervisor definido, instalado e configurado;
+2. Máquina virtual like Debian em modo "bridge" com IP configurado;
+3. Acesso remoto a máquina Virtual por meio de SSH com chave pública;
+4. Servidor web (apache ou nginx) configurado com uma aplicação à definir pelo aluno e com um caso de proxy-reverso configurado;
+5. Melhorias no servidor - log do servidor web configurado e inicialização automática.
 
-
+Data da entrega: Terça dia 02/03/2021.
