--- a/projeto01/README.me
+++ b/projeto01/README.me
@@ -59,3 +59,10 @@ Abrir no navegador >> http://IP-DA-VM/test  << validar proxy reverso no /test
 5. Melhorias no servidor - log do servidor web configurado e inicialização automática.
 
 Data da entrega: Terça dia 02/03/2021.
+
+
+
+
+
+![Screenshot from 2021-02-25 13-09-48](https://user-images.githubusercontent.com/21113135/109181908-36d3fa80-776b-11eb-8e7e-4c5e1de20bc0.png)
+
