--- a/projeto01/README.me
+++ b/projeto01/README.me
@@ -55,9 +55,9 @@ Abrir no navegador >> http://IP-DA-VM/test  << validar proxy reverso no /test
 
 # Entregas:
 1. Hypervisor definido, instalado e configurado;
-2. Máquina virtual like Debian em modo "bridge" com IP configurado;
+2. Máquina virtual like Debian em modo "bridge" ou NAT com IP configurado dinamicamente ou estatico e funcional;
 3. Acesso remoto a máquina Virtual por meio de SSH com chave pública;
-4. Servidor web (apache ou nginx) configurado com uma aplicação à definir pelo aluno e com um caso de proxy-reverso configurado;
+4. Servidor Web (apache ou nginx ou PHP-FPM) configurado com uma aplicação à definir pelo aluno e com um exemplo de proxy-reverso configurado e funcional;
 5. Melhorias no servidor - log do servidor web configurado e inicialização automática.
 
 Data da entrega: Terça dia 02/03/2021.
